--- a/src/css/1-timer.css
+++ b/src/css/1-timer.css
@@ -1,30 +1,76 @@
-body {
-    display: block;
-    font-size: large;
-    background-color: rgb(231, 229, 229);
-    padding-top: 10px;
-    padding-bottom: 100%;
-    padding-left: 10px;
+.text-link {
+    font-family: Montserrat, sans-serif;
+    color: black;
+    margin-left: 26px;
+    border-style: solid;
+    border-color: blue;
+    border-width: 1px;
 }
 
-.pagelink {
-    display: inline-flex;
-    font-size: large;
-    margin: 20px 10px;
-    padding: 10px;
-    background-color: rgb(87, 84, 84);
-    border: 1px double rgb(47, 47, 182);
-    border-radius: 10px;
-    color: aliceblue;
+.timer-box {
+    margin-left: 105px;
+    margin-top: 40px;
+}
 
+#datetime-picker {
+    margin-right: 8px;
+    padding: 6px;
+    width: 272px;
+    border-radius: 4px;
+    border-width: 0.5px;
+    border-color: #808080;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.04em;
+    color: #2e2f42;
+    outline: none;
+}
+
+#datetime-picker:hover,
+#datetime-picker:focus {
+    border-color: black;
+}
+
+#datetime-picker:active {
+    border-color: #4e75ff;
+}
+
+.btn-timer {
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.04em;
+    color: #989898;
+    border-radius: 8px;
+    padding: 8px 16px;
+    width: 75px;
+    height: 40px;
+    background: #cfcfcf;
+    border: none;
 }
 
 .timer {
     display: flex;
-}
-
-.field {
-    display: flex-block;
     margin-top: 20px;
-
+    width: 346px;
+    height: 72px;
+    gap: 24px;
 }
+
+.btn-active {
+    background: #4e75ff;
+    color: #fff;
+}
+
+.btn-active:hover,
+.btn-active:focus {
+    background: #6c8cff;
+}
+
+/* .field {
+    display: flex;
+    flex-direction: column;
+} */
