--- a/src/css/1-timer.css
+++ b/src/css/1-timer.css
@@ -37,7 +37,7 @@
     border-color: #4e75ff;
 }
 
-.btn-timer {
+.start-btn {
     font-family: 'Montserrat', sans-serif;
     font-weight: 500;
     font-size: 16px;
