--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -140,3 +140,24 @@ fieldset {
   max-width: 250px;
   column-gap: 30px;
 }
+
+
+.submit-btn{
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  color: #FFFFFF;
+  border-radius: 8px;
+  padding: 8px 16px;
+  width: 360px;
+  height: 40px;
+  background: #4E75FF;
+  border: none;
+}
+
+
+.submit-btn:hover {
+  background: #6C8CFF;
+}
