--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -127,18 +127,20 @@
   margin-top: 30px;
 }
 
-fieldset {
-  margin: 20px 0;
-}
-
 input {
   padding: 10px;
 }
 
 fieldset {
+  margin: 20px 0;
   display: flex;
-  max-width: 250px;
+  max-width: 360px;
   column-gap: 30px;
+  border: 1px solid #808080;
+}
+
+fieldset:hover{
+  border: 1px solid #000000
 }
 
 
