--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -127,6 +127,27 @@
   margin-top: 30px;
 }
 
+.delay-label {
+  display: flex;
+  flex-direction: column;
+  font-family: 'Montserrat';
+  gap: 8px;
+}
+
+
+.delay-label-input {
+  height: 40px;
+  width: 360px;
+  border-radius: 4px;
+  border: 1px solid #808080
+}
+
+
+.delay-label-input:hover{
+  border: 1px solid #000000
+}
+
+
 input {
   padding: 10px;
 }
